# Rusty-microchain

./: Cargo.toml  README.md
.github/workflows/: hugo.yml
docs/: hugo_stats.json  package-lock.json
docs/content/: _index.md
docs/content/docs/guides/: features.md  installation.md  logger.md
docs/public/: 404.html  index.html  index.xml  main.5627bbca71db43886591eb6b87197b0a99226f9ce54310de9beb1796b5dd162465dd0a2d062d5cf1365a76d2af8a369f7ed1e72628f2cb209df501c6b4fab283.css  main.css.map  main.e32a72f633829c37fa1ce2c23ec87405179b354327777ad61d5cf620020f8118c67a83f98207c7b4eaba8c3b5abcc53809125777bd03447a86204a33f1b753a4.css  search-index.json  sitemap.xml
docs/public/blog/: index.html  index.xml
docs/public/blog/example-post/: index.html
docs/public/categories/: index.html  index.xml
docs/public/contributors/: index.html  index.xml
docs/public/docs/: index.html  index.xml  sitemap.xml
docs/public/docs/guides/: index.html  index.xml  sitemap.xml
docs/public/docs/guides/example-guide/: index.html
docs/public/docs/guides/example-guide222/: index.html
docs/public/docs/reference/: index.html  index.xml  sitemap.xml
docs/public/docs/tutorials/: index.html  index.xml  sitemap.xml
docs/public/js/: app.55d88285f1228ef8623450410f81e807c460bbbfd1c27b2188b04d6b021d6ede.js
docs/public/privacy/: index.html
docs/public/tags/: index.html  index.xml
src/: Htmlloader.rs  PdfLoader.rs  backend.rs  chain.rs  chat.rs  decoder.rs  embeddings.rs  logging.rs  pipeline.rs  prompt.rs  similarity.rs  textloader.rs
src/test/: test.html  test.txt
(+8 files in other folders)
