[package]
name = "llm_rust_chain"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.50"
futures = "0.3"
serpapi-search-rust = "0.1.0"
tera = "1.10.0"
select = "0.5.0"
ollama-rs = "0.1.6"
exa_api_client = "0.1.2"
semanticsimilarity_rs = "0.1.0" 
prettytable = "0.10.0"
text_io = "0.1.9"
rand = "0.8.3"
pdf-extract = "0.7.4"



